[metadata]
# keep synchronous to Cargo.toml
version = 0.0.0a0

name = pyextrasafe
description = Make your code extrasafe by preventing it from calling unneeded syscalls
author = René Kijewski
author_email = pypi.org@k6i.de
url = https://github.com/Kijewski/pyextrasafe
license = MIT License
license_files = LICENSE.md
long_description = file: README.md
long_description_content_type = text/markdown

# https://pypi.org/classifiers/
classifiers =
    License :: OSI Approved :: Apache Software License
    Development Status :: 3 - Alpha
    Programming Language :: Rust
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = pyextrasafe
package_dir =
    = src
zip_safe = False
include_package_data = True
setup_requires = setuptools-rust == 1.*
python_requires = >= 3.7, < 4
